# agentic-patterns-course

./: .gitignore  =4.0  =4.5  README.md  pyproject.toml
notebooks/: planning_pattern.ipynb  react_agent_llamaIndex_rag_test.ipynb
resources/sample-datasets/: company_handbook.md  project_nexus_onboarding_guide.md  troubleshooting_local_setup.md
src/agentic_patterns/planning_pattern/: react_agent.py
